bugfix: herosection on small screens

--- a/src/app/main-content-landingpage/hero-section/hero-section.component.scss
+++ b/src/app/main-content-landingpage/hero-section/hero-section.component.scss
@@ -2,6 +2,7 @@
 
 #heroSection {
     height: 100vh;
+    min-height: 750px;
     background-image: url('./../../../assets/images/01_Background/all/isolatedPaperRips.jpg');
     background-repeat: no-repeat;
     background-size: cover;
